--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "@types/react-circular-progressbar": "^1.0.2",
     "@types/react-window": "^1.8.8",
     "framer-motion": "^11.0.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.3.0",
     "react-window": "^2.2.3",
     "swiper": "^11.0.0"
