--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@types/react-circular-progressbar": "^1.0.2",
     "@types/react-window": "^1.8.8",
+    "firebase": "^12.6.0",
     "framer-motion": "^11.0.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
+    "react-calendar-heatmap": "^1.10.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.3.0",
     "react-window": "^2.2.3",
