--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "chart.js": "^4.4.4",
     "@types/react-circular-progressbar": "^1.0.2",
     "@types/react-window": "^1.8.8",
     "firebase": "^12.6.0",
