--- a/env.example
+++ b/env.example
@@ -14,3 +14,21 @@ NEXT_PUBLIC_FIREBASE_APP_ID=1:464392492084:web:c62500842b172b6ba46661
 # 2. 위의 값들을 실제 Firebase 프로젝트 설정 값으로 교체
 # 3. Firebase Console에서 Authentication 활성화 (Google + 이메일/비밀번호)
 # 4. Firestore Database 생성 및 보안 규칙 설정 (firestore.rules.example 참고)
+
+# 포트원(KG이니시스) 결제 설정 (반드시 실제 값으로 교체 후 사용)
+# 주의: 테스트/실서버 키를 코드에 직접 커밋하지 말고 .env.local에만 보관하세요.
+NEXT_PUBLIC_PORTONE_STORE_ID=store-7cd602e6-371b-4bef-ac95-91cac7dfed54   # 예시: 제공된 store_id
+PORTONE_API_SECRET=<YOUR_PORTONE_API_SECRET>                               # 예시: api secret key
+NEXT_PUBLIC_PORTONE_CHANNEL_KEY=<YOUR_CHANNEL_KEY>                         # 예시: channel-key-...
+PORTONE_SIGNKEY=<YOUR_SIGNKEY>                                            # 예시: SU5JTElURV9UUklQTEVERVNfS0VZU1RS
+PORTONE_INIAPI_KEY=<YOUR_INIAPI_KEY>
+PORTONE_INIAPI_IV=<YOUR_INIAPI_IV>
+PORTONE_INILITE_KEY=<YOUR_INILITE_KEY>
+PORTONE_HASH_KEY=<YOUR_HASH_KEY>
+
+# 포트원 테스트 MID (KG이니시스 정기결제)
+PORTONE_TEST_MID=INIBillTst
+
+# 구독 상품 금액 (원)
+PORTONE_MONTHLY_AMOUNT=9900
+PORTONE_YEARLY_AMOUNT=99000
