--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:pwa": "cross-env ENABLE_PWA=true next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -28,14 +27,14 @@
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.3.0",
     "react-window": "^2.2.3",
-    "swiper": "^11.0.0"
+    "swiper": "^11.0.0",
+    "@portone/browser-sdk": "^0.0.10"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
-    "cross-env": "^10.1.0",
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.0",
