--- a/env.example
+++ b/env.example
@@ -25,6 +25,7 @@ PORTONE_INIAPI_KEY=<YOUR_INIAPI_KEY>
 PORTONE_INIAPI_IV=<YOUR_INIAPI_IV>
 PORTONE_INILITE_KEY=<YOUR_INILITE_KEY>
 PORTONE_HASH_KEY=<YOUR_HASH_KEY>
+NEXT_PUBLIC_PORTONE_KAKAO_CHANNEL_KEY=<YOUR_KAKAO_CHANNEL_KEY>  # 예: channel-key-b279a8fb-fe5f-439b-90d0-31762d0e11df
 
 # 포트원 테스트 MID (KG이니시스 정기결제)
 PORTONE_TEST_MID=INIBillTst
