--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "JLPT Plus",
-  "short_name": "JLPT Plus",
-  "description": "Premium JLPT learning application",
+  "name": "Mogu-JLPT",
+  "short_name": "Mogu-JLPT",
+  "description": "MoguMogu 언어 학습 플랫폼 - JLPT 시험 대비 간격 반복 학습",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#FBFAF7",
