--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# Firebase 설정
+# Firebase 클라이언트 설정
 # Firebase Console (https://console.firebase.google.com)에서 프로젝트 생성 후
 # 프로젝트 설정 > 일반 > 앱에서 웹 앱 추가하여 아래 값들을 가져올 수 있습니다.
 
@@ -8,6 +8,14 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=jplt-plus-app
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=jplt-plus-app.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=464392492084
 NEXT_PUBLIC_FIREBASE_APP_ID=1:464392492084:web:c62500842b172b6ba46661
+
+# Firebase Admin SDK 설정 (서버 사이드 전용)
+# Firebase Console > 프로젝트 설정 > 서비스 계정 > 새 비공개 키 생성
+# 다운로드한 JSON 파일의 내용을 한 줄로 변환하여 아래에 입력
+# 또는 Application Default Credentials 사용 시 PROJECT_ID만 설정
+FIREBASE_SERVICE_ACCOUNT=<YOUR_SERVICE_ACCOUNT_JSON>
+# 개발 환경에서 gcloud CLI 사용 시
+FIREBASE_PROJECT_ID=jplt-plus-app
 
 # 사용 방법:
 # 1. 이 파일을 .env.local로 복사: cp .env.example .env.local
@@ -33,3 +41,8 @@ PORTONE_TEST_MID=INIBillTst
 # 구독 상품 금액 (원)
 PORTONE_MONTHLY_AMOUNT=9900
 PORTONE_YEARLY_AMOUNT=99000
+
+# RapidAPI 설정 (한자 데이터 스크립트용)
+# https://rapidapi.com/KanjiAlive/api/kanjialive 에서 API 키 발급
+# 주의: 절대 코드에 하드코딩하지 말고 환경변수로만 사용
+RAPIDAPI_KEY=<YOUR_RAPIDAPI_KEY>
