--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.3.0",
     "react-window": "^2.2.3",
+    "recharts": "^3.5.1",
     "swiper": "^11.0.0"
   },
   "devDependencies": {
