--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#FBFAF7",
-  "theme_color": "#0F7FE1",
+  "theme_color": "#1E88E5",
   "orientation": "portrait",
   "icons": [
     {
