--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "fetch-kanji": "tsx scripts/fetch-kanji.ts",
     "fetch-n2-kanji": "tsx scripts/fetch-n2-kanji-data.ts",
     "fetch-n3-kanji": "tsx scripts/fetch-n3-kanji-data.ts",
@@ -37,13 +40,19 @@
     "swiper": "^11.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^14.3.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.0",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.21.0",
     "typescript": "^5.5.0"
   },
