--- a/env.example
+++ b/env.example
@@ -42,6 +42,11 @@ PORTONE_TEST_MID=INIBillTst
 PORTONE_MONTHLY_AMOUNT=9900
 PORTONE_YEARLY_AMOUNT=99000
 
+# Google Play Billing 상품 ID (PWA가 TWA로 설치된 경우 사용)
+# Google Play Console에서 생성한 구독 상품 ID를 입력
+NEXT_PUBLIC_GOOGLE_PLAY_PRODUCT_ID_MONTHLY=monthly_subscription
+NEXT_PUBLIC_GOOGLE_PLAY_PRODUCT_ID_QUARTERLY=quarterly_subscription
+
 # RapidAPI 설정 (한자 데이터 스크립트용)
 # https://rapidapi.com/KanjiAlive/api/kanjialive 에서 API 키 발급
 # 주의: 절대 코드에 하드코딩하지 말고 환경변수로만 사용
