--- a/env.example
+++ b/env.example
@@ -27,13 +27,20 @@ FIREBASE_PROJECT_ID=jplt-plus-app
 # 주의: 테스트/실서버 키를 코드에 직접 커밋하지 말고 .env.local에만 보관하세요.
 NEXT_PUBLIC_PORTONE_STORE_ID=store-7cd602e6-371b-4bef-ac95-91cac7dfed54   # 예시: 제공된 store_id
 PORTONE_API_SECRET=<YOUR_PORTONE_API_SECRET>                               # 예시: api secret key
-NEXT_PUBLIC_PORTONE_CHANNEL_KEY=<YOUR_CHANNEL_KEY>                         # 예시: channel-key-...
+NEXT_PUBLIC_PORTONE_CHANNEL_KEY=<YOUR_CHANNEL_KEY>                         # (레거시) 기존 단건/정기 통합 키
+# 신규: 결제 유형별 채널 키 분리 (V2)
+NEXT_PUBLIC_PORTONE_CHANNEL_KEY_CARD_GENERAL=<YOUR_CARD_GENERAL_KEY>           # KG이니시스 카드 결제 (단건 - 일반 PG)
+NEXT_PUBLIC_PORTONE_CHANNEL_KEY_CARD_SUBSCRIPTION=<YOUR_CARD_SUBSCRIPTION_KEY> # KG이니시스 카드 결제 (정기 - 정기결제용 PG)
+
 PORTONE_SIGNKEY=<YOUR_SIGNKEY>                                            # 예시: SU5JTElURV9UUklQTEVERVNfS0VZU1RS
 PORTONE_INIAPI_KEY=<YOUR_INIAPI_KEY>
 PORTONE_INIAPI_IV=<YOUR_INIAPI_IV>
 PORTONE_INILITE_KEY=<YOUR_INILITE_KEY>
 PORTONE_HASH_KEY=<YOUR_HASH_KEY>
-NEXT_PUBLIC_PORTONE_KAKAO_CHANNEL_KEY=<YOUR_KAKAO_CHANNEL_KEY>  # 예: channel-key-b279a8fb-fe5f-439b-90d0-31762d0e11df
+NEXT_PUBLIC_PORTONE_KAKAO_CHANNEL_KEY=<YOUR_KAKAO_CHANNEL_KEY>  # (레거시) 기존 카카오 통합 키
+# 신규: 카카오페이 결제 유형별 분리
+NEXT_PUBLIC_PORTONE_CHANNEL_KEY_KAKAO_GENERAL=<YOUR_KAKAO_GENERAL_KEY>         # 카카오페이 (단건)
+NEXT_PUBLIC_PORTONE_CHANNEL_KEY_KAKAO_SUBSCRIPTION=<YOUR_KAKAO_SUBSCRIPTION_KEY> # 카카오페이 (정기)
 
 # 포트원 테스트 MID (KG이니시스 정기결제)
 PORTONE_TEST_MID=INIBillTst
