--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@portone/browser-sdk": "^0.0.10",
+    "@types/nodemailer": "^7.0.4",
     "@types/react-circular-progressbar": "^1.0.2",
     "@types/react-window": "^1.8.8",
     "chart.js": "^4.4.4",
@@ -31,6 +32,7 @@
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.560.0",
     "next": "^14.2.35",
+    "nodemailer": "^7.0.12",
     "react": "^18.3.0",
     "react-calendar-heatmap": "^1.10.0",
     "react-circular-progressbar": "^2.2.0",
