--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.3.0",
     "react-window": "^2.2.3",
     "recharts": "^3.5.1",
+    "styled-jsx": "^5.1.7",
     "swiper": "^11.0.0"
   },
   "devDependencies": {
